--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jack DeVries</title>
-    <style>
-      * {
-        box-sizing: border-box;
-        font-family: Helvetica, Arial, Sans-Serif;
-      }
-
-      .container {
-        max-width: 600px;
-      }
-    </style>
+    <link href="/styles.css" rel="stylesheet" />
+    <script>
+      document.write(
+        '<script src="http://' +
+          (location.host || "localhost").split(":")[0] +
+          ':35729/livereload.js?snipver=1"></' +
+          "script>"
+      );
+    </script>
   </head>
   <body>
     <div class="container">
