reword ending section

--- a/src/index.html
+++ b/src/index.html
@@ -645,12 +645,15 @@
         <p class="text-sm text-black">
           Although I am new to the business, I have already spent a lot of time
           working on software projects big and small. I know how to navigate
-          large codebases and make meaningful contributions to them. I have also
-          learned how to push projects forward and organize my work as a
-          developer. I understand the importance of agility and good development
-          practices, and I have a great understanding of the tools that I know
-          – not just languages and libraries, but my broader development
-          workflow.
+          large codebases and make meaningful contributions to them. I also have
+          followed best-practices for my new projects, and I've encountered
+          software development methodologies in a hands-on way to help me manage
+          my own larger projects.
+        </p>
+        <p class="text-sm text-black">
+          I understand the importance of agility and good development practices,
+          and I have a great understanding of the tools that I know – not just
+          languages and libraries, but my broader development workflow.
         </p>
         <p class="text-sm text-black">
           Overall, I am applying because I feel ready, and I hope that we can
